[gd_scene load_steps=56 format=2]

[ext_resource path="res://Assets/perkins-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/briddle-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Cop.gd" type="Script" id=3]
[ext_resource path="res://Assets/holiday-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/byosn-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/shadow.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sound/byson/death_2.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sound/byson/death_1.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sound/byson/going_for_cuffs.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sound/byson/stop_resisting.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sound/briddle/death_2.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sound/briddle/stop_resisting.mp3" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sound/briddle/going_for_cuffs.mp3" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sound/briddle/death_1.mp3" type="AudioStream" id=14]
[ext_resource path="res://Assets/Sound/holiday/death_1.mp3" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sound/holiday/going_for_cuffs.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/Sound/holiday/stop_resisting.mp3" type="AudioStream" id=17]
[ext_resource path="res://Assets/Sound/holiday/death_2.mp3" type="AudioStream" id=18]
[ext_resource path="res://Assets/Sound/perkins/death1.mp3" type="AudioStream" id=19]
[ext_resource path="res://Assets/Sound/perkins/death2.mp3" type="AudioStream" id=20]
[ext_resource path="res://Assets/Sound/perkins/going_for_cuffs.mp3" type="AudioStream" id=21]
[ext_resource path="res://Assets/Sound/perkins/stop_resisting.mp3" type="AudioStream" id=22]
[ext_resource path="res://Assets/peach-sheet.png" type="Texture" id=23]
[ext_resource path="res://Assets/toretti-sheet.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sound/toretti/death1.mp3" type="AudioStream" id=25]
[ext_resource path="res://Assets/Sound/toretti/death2.mp3" type="AudioStream" id=26]
[ext_resource path="res://Assets/Sound/toretti/resist.mp3" type="AudioStream" id=27]
[ext_resource path="res://Assets/Sound/toretti/cuffs.mp3" type="AudioStream" id=28]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 112 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 23 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 23 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 23 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 23 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 24 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 24 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 24 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 24 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "briddle",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "byson",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "holiday",
"speed": 5.0
}, {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "peach",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "perkins",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "toretti",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 50, 114 )

[node name="Cop" type="StaticBody2D" groups=["Cop", "Shootable"]]
collision_layer = 4
collision_mask = 17
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -115 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -64, -60 )
scale = Vector2( 10, 10 )
frames = SubResource( 2 )
animation = "toretti"
frame = 1
playing = true
centered = false
offset = Vector2( -9, -21 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( -3, -9 )
scale = Vector2( 4, 1 )
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="DeadTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WarnArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WarnArea"]
position = Vector2( -95, -115 )
shape = SubResource( 19 )

[node name="Byson" type="Node2D" parent="."]

[node name="Death1" type="AudioStreamPlayer" parent="Byson"]
stream = ExtResource( 8 )
volume_db = 5.0
bus = "Effects"

[node name="Death2" type="AudioStreamPlayer" parent="Byson"]
stream = ExtResource( 7 )
volume_db = 5.0
bus = "Effects"

[node name="Cuffs" type="AudioStreamPlayer" parent="Byson"]
stream = ExtResource( 9 )
volume_db = 5.0
bus = "Effects"

[node name="Resist" type="AudioStreamPlayer" parent="Byson"]
stream = ExtResource( 10 )
volume_db = 5.0
bus = "Effects"

[node name="Briddle" type="Node2D" parent="."]

[node name="Death1" type="AudioStreamPlayer" parent="Briddle"]
stream = ExtResource( 14 )
volume_db = 5.0
bus = "Effects"

[node name="Death2" type="AudioStreamPlayer" parent="Briddle"]
stream = ExtResource( 11 )
volume_db = 5.0
bus = "Effects"

[node name="Cuffs" type="AudioStreamPlayer" parent="Briddle"]
stream = ExtResource( 13 )
volume_db = 5.0
bus = "Effects"

[node name="Resist" type="AudioStreamPlayer" parent="Briddle"]
stream = ExtResource( 12 )
volume_db = 5.0
bus = "Effects"

[node name="Holiday" type="Node2D" parent="."]

[node name="Death1" type="AudioStreamPlayer" parent="Holiday"]
stream = ExtResource( 15 )
volume_db = 5.0
bus = "Effects"

[node name="Death2" type="AudioStreamPlayer" parent="Holiday"]
stream = ExtResource( 18 )
volume_db = 5.0
bus = "Effects"

[node name="Cuffs" type="AudioStreamPlayer" parent="Holiday"]
stream = ExtResource( 16 )
volume_db = 5.0
bus = "Effects"

[node name="Resist" type="AudioStreamPlayer" parent="Holiday"]
stream = ExtResource( 17 )
volume_db = 5.0
bus = "Effects"

[node name="Peach" type="Node2D" parent="."]

[node name="Perkins" type="Node2D" parent="."]

[node name="Death1" type="AudioStreamPlayer" parent="Perkins"]
stream = ExtResource( 19 )
volume_db = 1.0
bus = "Effects"

[node name="Death2" type="AudioStreamPlayer" parent="Perkins"]
stream = ExtResource( 20 )
volume_db = 1.0
bus = "Effects"

[node name="Cuffs" type="AudioStreamPlayer" parent="Perkins"]
stream = ExtResource( 21 )
volume_db = 1.0
bus = "Effects"

[node name="Resist" type="AudioStreamPlayer" parent="Perkins"]
stream = ExtResource( 22 )
volume_db = 1.0
bus = "Effects"

[node name="Toretti" type="Node2D" parent="."]

[node name="Death1" type="AudioStreamPlayer" parent="Toretti"]
stream = ExtResource( 25 )
volume_db = 5.0
bus = "Effects"

[node name="Death2" type="AudioStreamPlayer" parent="Toretti"]
stream = ExtResource( 26 )
volume_db = 5.0
bus = "Effects"

[node name="Resist" type="AudioStreamPlayer" parent="Toretti"]
stream = ExtResource( 27 )
volume_db = 5.0
bus = "Effects"

[node name="Cuffs" type="AudioStreamPlayer" parent="Toretti"]
stream = ExtResource( 28 )
volume_db = 5.0
bus = "Effects"

[node name="ScorePos" type="Position2D" parent="."]
position = Vector2( 0, -96 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeadTimer" to="." method="_on_DeadTimer_timeout"]
[connection signal="body_entered" from="WarnArea" to="." method="_on_WarnArea_body_entered"]
